Closed
Bug 809909
Opened 13 years ago
Closed 13 years ago
spdy/3 goaway frame wrong format
Categories
(Core :: Networking: HTTP, defect)
Tracking
()
RESOLVED
FIXED
mozilla19
People
(Reporter: mcmanus, Assigned: mcmanus)
References
Details
(Whiteboard: [spdy])
Attachments
(1 file)
4.16 KB,
patch
|
mayhemer
:
review+
|
Details | Diff | Splinter Review |
spdy/3 changed the format of the spdy go away frame, but we didn't update it.
twitter informed me of this - its not causing a big problem because its part of the shutdown sequence anyhow.
One of the reasons the format changed was to include a reason code which is also the reason in spdy/2 we only send GA on clean shutdowns.
So that makes this patch easy - always send OK as the reason code. It is quite safe to backport.
I'll put together a different bug for mozilla-central only that sends GoAway in some error cases.
Assignee | ||
Updated•13 years ago
|
Assignee: nobody → mcmanus
Assignee | ||
Comment 1•13 years ago
|
||
Attachment #679751 -
Flags: review?(honzab.moz)
![]() |
||
Updated•13 years ago
|
Attachment #679751 -
Flags: review?(honzab.moz) → review+
Assignee | ||
Comment 2•13 years ago
|
||
Comment 3•13 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/c28e2bf7d490
Should this have a test?
Status: NEW → RESOLVED
Closed: 13 years ago
Flags: in-testsuite?
Resolution: --- → FIXED
Target Milestone: --- → mozilla19
Comment 4•13 years ago
|
||
I got this:
/home/kanru/zone2/mozilla/central/netwerk/protocol/http/SpdySession3.cpp: In member function ‘virtual void mozilla::net::SpdySession3::Close(nsresult)’:
/home/kanru/zone2/mozilla/central/netwerk/protocol/http/SpdySession3.cpp:1873: error: ‘goawayReason’ is not a class or namespace
Comment 5•13 years ago
|
||
Yeah, it's not kosher to have goawayreason::OK. You can do that if you have a C++11 enum class, but not with normal C++ enums. Could you update this to use mozilla/Attributes.h and MOZ_BEGIN_ENUM_CLASS/MOZ_END_ENUM_CLASS, please?
You need to log in
before you can comment on or make changes to this bug.
Description
•