netwerk/protocol/http/SpdySession3.cpp
@@ -599,26 +599,30 @@ SpdySession3::GenerateRstStream(uint32_t aStatusCode, uint32_t aID)
 }
 
 void
-SpdySession3::GenerateGoAway()
+SpdySession3::GenerateGoAway(uint32_t aStatusCode)
 {
   NS_ABORT_IF_FALSE(PR_GetCurrentThread() == gSocketThread, "wrong thread");
-  LOG3(("SpdySession3::GenerateGoAway %p\n", this));
+  LOG3(("SpdySession3::GenerateGoAway %p code=%X\n", this, aStatusCode));
 
-  EnsureBuffer(mOutputQueueBuffer, mOutputQueueUsed + 12,
+  EnsureBuffer(mOutputQueueBuffer, mOutputQueueUsed + 16,
                mOutputQueueUsed, mOutputQueueSize);
   char *packet = mOutputQueueBuffer.get() + mOutputQueueUsed;
-  mOutputQueueUsed += 12;
+  mOutputQueueUsed += 16;
 
-  memset(packet, 0, 12);
+  memset(packet, 0, 16);
   packet[0] = kFlag_Control;
   packet[1] = kVersion;
   packet[3] = CONTROL_TYPE_GOAWAY;
-  packet[7] = 4;                                  /* data length */
+  packet[7] = 8;                                  /* data length */
   
   // last-good-stream-id are bytes 8-11, when we accept server push this will
   // need to be set non zero
 
-  LogIO(this, nullptr, "Generate GoAway", packet, 12);
+  // bytes 12-15 are the status code.
+  aStatusCode = PR_htonl(aStatusCode);
+  memcpy(packet + 12, &aStatusCode, 4);
+
+  LogIO(this, nullptr, "Generate GoAway", packet, 16);
   FlushOutputQueue();
 }
 
@@ -1859,7 +1863,7 @@ SpdySession3::Close(nsresult aReason)
   mStreamTransactionHash.Clear();
 
   if (NS_SUCCEEDED(aReason))
-    GenerateGoAway();
+    GenerateGoAway(goawayReason::OK);
   mConnection = nullptr;
   mSegmentReader = nullptr;
   mSegmentWriter = nullptr;
